# graduation_research_impression_extraction

./: .gitignore  pyproject.toml
impression_extraction/: cabocha.py  count_folder.py  dictionary.py  evaluation_expressions_dic.py  evaluation_information_matching_cabocha.py  kamei.py  keyword_matching.py  keyword_matching_ginza.py  keyword_matching_ginza_one_item.py  main.py  make_user_dic_csv.py
impression_extraction/csv/01H15YBTM7E7FMQ8377JF9TTQA/: 01H15YBTM7E7FMQ8377JF9TTQA_description.csv  01H15YBTM7E7FMQ8377JF9TTQA_review.csv
impression_extraction/csv/01H1DSDE65SJA2T0D2BWWBQSP1/: 01H1DSDE65SJA2T0D2BWWBQSP1_description.csv  01H1DSDE65SJA2T0D2BWWBQSP1_review.csv
impression_extraction/dic/: EVALDIC_ver1.01  EVALDIC_ver1.01+POS  stopword.txt
impression_extraction/utils/: array_dic.py  remove_duplicate.py
