[tool.poetry]
name = "impression-extraction"
version = "0.1.0"
description = ""
authors = ["yuu <yusei8171@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.5"
pyknp = "^0.6.1"
pandas = "^2.0.1"
demoji = "^1.1.0"
wheel = "^0.40.0"
mecab-python3 = "^1.0.6"
cabocha-python = "^0.69.3"
python-dotenv = "^1.0.0"
seaborn = "^0.12.2"
nltk = "^3.8.1"
ginza = "^5.1.2"
ja-ginza-electra = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
